B&L QA/objects/Functionality_Management__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains on/off switches for custom functionality</description>
    <fields>
        <fullName>Context__c</fullName>
        <description>Context</description>
        <label>Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the functionality should be switched on or off</description>
        <label>Switch</label>
        <type>Checkbox</type>
    </fields>
    <label>Functionality Management</label>
</CustomObject>